# SCUCTF-Backup

./: README.md
SCUCTF新生赛2021/RE3_DebugMe/: RE3_DebugMe
SCUCTF新生赛2021/RE5_ezapk/: RE5_ezapk.apk  exp.cpp
SCUCTF新生赛2021/RE6_EzLinearEquation/: exp.py
SCUCTF新生赛2021/RE7_VirtualMachine/: RE7_VirtualMachine.exe.idb  angr_exp.py  dump.cpp  dump.txt  exp.cpp
SCUCTF新生赛2021/RE8_PyCode/: exp.py
SCUCTF新生赛2021/RE9_Plants_Vs_Zombies/: exp.cpp
SCUCTF新生赛2021/RE9_Plants_Vs_Zombies/Plants_Vs_Zombies/: flag.enc
SCUCTF新生赛2021/RE9_Plants_Vs_Zombies/Plants_Vs_Zombies/properties/: LawnStrings.txt
SCUx401CTF2021/: WriteUp.md
SCUx401CTF2021/RE1-ez_fps/ez_fps_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level0.resS  sharedassets0.resource
SCUx401CTF2021/RE1-ez_fps/ez_fps_Data/Resources/: unity_builtin_extra
SCUx401CTF2021/RE3-rvm/: exp.cpp  gen.py  rvm.analyse.rb  rvm.rb
SCUx401CTF2021/RE4-overflow/: CMakeLists.txt  overflow
SCUx401CTF2021/RE4-overflow/exp/: exp.py  pytea.py  table.py
SCUx401CTF2021/RE4-overflow/include/: RC4.h  TEA.h
SCUx401CTF2021/RE4-overflow/src/: RC4.cpp  TEA.cpp  gen.py  overflow.cpp
SCUx401CTF2021/RE5-baby_maze/: baby_maze  baby_maze.cpp  maze_gen.py
SCUx401CTF2021/RE5-baby_maze/exp/: exp.py  rmrdrand.py
SCUx401CTF2021/RE6-twin/: CMakeLists.txt  exp.cpp
SCUx401CTF2021/RE6-twin/include/: AES.h
SCUx401CTF2021/RE6-twin/src/: twin.cpp
re5-maze/: maze
